 
[v1.1.2p2a]
 - Bugfix: when removing a child station from a SplitDockPerspective, the placeholders were not stored properly
 - Bugfix: when dropping a Dockable on a SplitDockStation the location was not always read correctly (caused by a change when implementing the "aside" feature)
 ! API: CloseableDockableMenuPiece now sorts its items
 - Bugfix: Replacing a "Placeholder" with a "Leaf" does no longer delete the PlaceholderMap
 - Bugfix: SplitDockStation is more careful when removing placeholders from PlaceholderMaps
 - Bugfix: SplitDockStation does no longer move Dockables after combining if said Dockables have a placeholder
 
[v1.1.2p2b]
 - Bugfix: fixed an issue where the "InternalDockDialog" could not be dragged properly when its parent window was not at position 0/0.
 ! API: Removed unnecessary parameter from "ScreenDockWindow.setWindowBounds"
 
[v1.1.2p2c]
 - Bugfix: StackDockStation did not properly add a listener to its StackDockComponent when the component was set and the station already had children. As a result using the overflow-menu for selecting a Dockable did not trigger a focus change.
 - Bugfix: Fixed an issue where the insets of the EclipseBorder was ignored when calculating the minimum/preferred size of a Dockable.
 
[v1.1.2p2d]
 - API: Made ListSpanStrategy more resilient against early calls to its methods (it did throw an NPE)
 - Bugfix: ListSpanStrategy did not respect the parameter "spanFactoryId" in its constructor
 - API: InternalScreenDockWindowFactory supports setting the layer of the newly created dialogs
 - Bugfix: Made ScreenDockStation aware of extensions when calling the drop(Dockable) method
 - Bugfix: Made ToolbarGroupDockStation searching for a DockController by its parents when missing one
 
[v1.1.2p2e]
 ! API: The border of a ScreenDockWindow can now be used to move the window, while resizing is not allowed. In previous versions the border simply was removed if resizing was disabled. 