@@ -901,4 +901,5 @@
  - Bugfix: Made ToolbarGroupDockStation searching for a DockController by its parents when missing one
  
 [v1.1.2p2e]
- ! API: The border of a ScreenDockWindow can now be used to move the window, while resizing is not allowed. In previous versions the border simply was removed if resizing was disabled. 
+ ! API: The border of a ScreenDockWindow can now be used to move the window, while resizing is not allowed. In previous versions the border simply was removed if resizing was disabled.
+ - Bugfix: CToolbarContentArea made minimized Dockables invisible (actually their size was always close to 0/0) 
